--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "meadowlark.js",
   "scripts": {
     "start": "nodemon meadowlark.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint meadowlark.js lib",
+    "test": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,12 @@
   "dependencies": {
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6"
+  },
+  "devDependencies": {
+    "eslint": "^8.21.0",
+    "eslint-plugin-jest": "^26.7.0",
+    "jest": "^28.1.3",
+    "portfinder": "^1.0.28",
+    "puppeteer": "^16.0.0"
   }
 }
