--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "pm2 start src/fseasonapp.js --watch --name fseasonapp",
     "restart": "pm2 restart fseasonapp",
     "stop": "pm2 stop fseasonapp",
-    "test": "jest --watch",
+    "test": "jest --watchAll",
     "lint": "eslint src/fseasonapp.js src"
   },
   "repository": {
@@ -22,14 +22,17 @@
   },
   "homepage": "https://github.com/numnafseason/fseason.info#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "joi": "^17.6.0",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "supertest": "^6.2.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.4.0",
     "eslint": "^8.21.0",
     "eslint-plugin-jest": "^26.7.0",
     "jest": "^28.1.3",
