--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.4.0",
-    "eslint": "^8.21.0",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
+    "eslint": "^8.22.0",
     "eslint-plugin-jest": "^26.7.0",
     "jest": "^28.1.3",
     "portfinder": "^1.0.28",
-    "puppeteer": "^16.0.0"
+    "puppeteer": "^16.0.0",
+    "typescript": "^4.7.4"
   }
 }
