--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "meadowlark.js",
   "scripts": {
-    "start": "pm2 start dist/fseasonapp.js --watch --name fseasonapp",
+    "__start": "pm2 start dist/fseasonapp.js --watch --name fseasonapp",
     "restart": "pm2 restart fseasonapp",
     "stop": "pm2 stop fseasonapp",
     "dev": "concurrently 'npx tsc --watch' 'nodemon -q dist/index.js'",
@@ -36,16 +36,12 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.4.0",
-<<<<<<< HEAD
-    "@typescript-eslint/eslint-plugin": "^5.33.1",
-    "@typescript-eslint/parser": "^5.33.1",
-    "eslint": "^8.22.0",
-=======
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.3",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
     "concurrently": "^7.3.0",
-    "eslint": "^8.21.0",
->>>>>>> 33695427fae05be1bd8846ef1005f6054b0fb907
+    "eslint": "^8.22.0",
     "eslint-plugin-jest": "^26.7.0",
     "jest": "^28.1.3",
     "nodemon": "^2.0.19",
