--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
         "node_modules/*",
       ]
     },
+    "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "sourceMap": true,
     
