--- a/package.json
+++ b/package.json
@@ -1,52 +1,83 @@
 {
-  "name": "fseason.info",
-  "version": "1.0.0",
-  "description": "",
-  "main": "meadowlark.js",
-  "scripts": {
-    "__start": "pm2 start dist/fseasonapp.js --watch --name fseasonapp",
-    "restart": "pm2 restart fseasonapp",
-    "stop": "pm2 stop fseasonapp",
-    "dev": "concurrently 'npx tsc --watch' 'nodemon -q dist/index.js'",
-    "test": "jest --watchAll",
-    "lint": "eslint src/fseasonapp.js src",
-    "build": "npx tsc"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/numnafseason/fseason.info.git"
-  },
-  "keywords": [],
+  "name": "typescripteexpressStarter",
+  "version": "0.0.0",
+  "description": "TypeScript + Knex + MySQL + Express API Server",
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/numnafseason/fseason.info/issues"
+  "scripts": {
+    "start": "npm run build && cross-env NODE_ENV=production node dist/server.js",
+    "dev": "cross-env NODE_ENV=development nodemon",
+    "build": "swc src -d dist --source-maps --copy-files",
+    "build:tsc": "tsc && tsc-alias",
+    "test": "jest --forceExit --detectOpenHandles",
+    "lint": "eslint --ignore-path .gitignore --ext .ts src/",
+    "lint:fix": "npm run lint -- --fix",
+    "seed": "knex seed:run --knexfile=knexfile.ts --verbose",
+    "migrate": "knex migrate:latest --knexfile=knexfile.ts --verbose",
+    "rollback": "knex migrate:rollback --knexfile=knexfile.ts --verbose",
+    "make:seeder": "knex seed:make --knexfile=knexfile.ts -x ts --env development",
+    "make:migration": "knex migrate:make --knexfile=knexfile.ts -x ts --env development",
+    "deploy:prod": "npm run build && pm2 start ecosystem.config.js --only prod",
+    "deploy:dev": "pm2 start ecosystem.config.js --only dev"
   },
-  "homepage": "https://github.com/numnafseason/fseason.info#readme",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.0",
+    "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "ejs": "^3.1.8",
+    "envalid": "^7.3.1",
     "express": "^4.18.1",
-    "express-handlebars": "^6.0.6",
-    "joi": "^17.6.0",
-    "mysql2": "^2.3.3",
-    "supertest": "^6.2.4"
+    "helmet": "^5.1.1",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^2.2.0",
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
+    "objection": "^3.0.1",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0",
+    "winston": "^3.8.1",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.4.0",
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.2.235",
+    "@types/bcrypt": "^5.0.0",
+    "@types/compression": "^1.7.2",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/node": "^18.7.3",
+    "@types/hpp": "^0.2.2",
+    "@types/jest": "^28.1.7",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/knex": "^0.16.1",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^18.7.6",
+    "@types/supertest": "^2.0.12",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
-    "concurrently": "^7.3.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.22.0",
-    "eslint-plugin-jest": "^26.7.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.1",
     "jest": "^28.1.3",
+    "lint-staged": "^13.0.3",
+    "node-config": "^0.0.2",
+    "node-gyp": "^9.1.0",
     "nodemon": "^2.0.19",
-    "portfinder": "^1.0.28",
-    "puppeteer": "^16.0.0",
+    "pm2": "^5.2.0",
+    "prettier": "^2.7.1",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.8",
+    "ts-node": "^10.9.1",
+    "tsc-alias": "^1.7.0",
+    "tsconfig-paths": "^4.1.0",
     "typescript": "^4.7.4"
   }
 }
